<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_name" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart_name" />
        <item
            android:id="@+id/nav_featured_stores"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/ft_name"/>
        <item
            android:id="@+id/nav_language_settings"
            android:icon="@drawable/ic_g_translate_black_24dp"
            android:title="@string/lang_name" />
        <item
            android:id="@+id/nav_display"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/display_name" />
    </group>

</menu>
